// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumbs > should have success render if the number of items is less than maxVisibleCount > should match snapshot 1`] = `
<nav
  aria-label="Breadcrumb"
  class="inf-breadcrumbs"
>
  <a
    class="inf-breadcrumbs-item"
    href="https://specdep.ru"
    title="Главная"
  >
    Главная
  </a>
  <svg
    class="inf-breadcrumbs-separator"
    fill="none"
    height="20"
    viewBox="0 0 20 20"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 15L13 10L8 5"
      stroke="currentColor"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
  <a
    class="inf-breadcrumbs-item"
    href="https://specdep.ru"
    title="Прасс Павел"
  >
    Прасс Павел
  </a>
  <svg
    class="inf-breadcrumbs-separator"
    fill="none"
    height="20"
    viewBox="0 0 20 20"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 15L13 10L8 5"
      stroke="currentColor"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
  <a
    class="inf-breadcrumbs-item"
    href="https://specdep.ru"
    title="Хальмеев Александр"
  >
    Хальмеев Александр
  </a>
</nav>
`;

exports[`Breadcrumbs > should match snapshot 1`] = `
<nav
  aria-label="Breadcrumb"
  class="inf-breadcrumbs"
>
  <a
    class="inf-breadcrumbs-item"
    href="https://specdep.ru"
    title="Главная"
  >
    Главная
  </a>
  <svg
    class="inf-breadcrumbs-separator"
    fill="none"
    height="20"
    viewBox="0 0 20 20"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 15L13 10L8 5"
      stroke="currentColor"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
  <a
    class="inf-breadcrumbs-item"
    href="https://specdep.ru"
    title="Прасс Павел"
  >
    Прасс Павел
  </a>
  <svg
    class="inf-breadcrumbs-separator"
    fill="none"
    height="20"
    viewBox="0 0 20 20"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 15L13 10L8 5"
      stroke="currentColor"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
  <a
    class="inf-breadcrumbs-item"
    href="https://specdep.ru"
    title="Хальмеев Александр"
  >
    Хальмеев Александр
  </a>
</nav>
`;

exports[`Breadcrumbs Basic > should match snapshot 1`] = `
<nav
  aria-label="Breadcrumb"
  class="inf-breadcrumbs"
>
  <a
    class="inf-breadcrumbs-item"
    href="https://specdep.ru/"
  >
    Главная
  </a>
  <svg
    class="inf-breadcrumbs-separator"
    fill="none"
    height="20"
    viewBox="0 0 20 20"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 15L13 10L8 5"
      stroke="currentColor"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
  <a
    class="inf-breadcrumbs-item"
    href="https://specdep.ru/"
    target="_blank"
  >
    Павел Прасс
  </a>
  <svg
    class="inf-breadcrumbs-separator"
    fill="none"
    height="20"
    viewBox="0 0 20 20"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 15L13 10L8 5"
      stroke="currentColor"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
  <span
    class="inf-breadcrumbs-item"
  >
    Хальмеев Александр
  </span>
</nav>
`;

exports[`Breadcrumbs Dropdown Menu > should match snapshot > dropdown 1`] = `
<div
  aria-labelledby="radix-:r8:"
  aria-orientation="vertical"
  class="inf-dropdown-menu-content"
  data-align="center"
  data-orientation="vertical"
  data-radix-menu-content=""
  data-side="bottom"
  data-state="open"
  dir="ltr"
  id="radix-:r9:"
  role="menu"
  style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); pointer-events: auto;"
  tabindex="-1"
>
  <a
    as="a"
    class="inf-dropdown-menu-item"
    data-orientation="vertical"
    data-radix-collection-item=""
    href="https://specdep.ru"
    role="menuitem"
    tabindex="-1"
    title="Прасс Павел"
  >
    Прасс Павел
  </a>
  <a
    as="a"
    class="inf-dropdown-menu-item"
    data-orientation="vertical"
    data-radix-collection-item=""
    href="https://specdep.ru"
    role="menuitem"
    tabindex="-1"
    title="Хальмеев Александр"
  >
    Хальмеев Александр
  </a>
</div>
`;

exports[`Breadcrumbs Dropdown Menu > should match snapshot 1 > dropdown 1`] = `
<div
  data-side="bottom"
  data-align="center"
  role="menu"
  aria-orientation="vertical"
  data-state="open"
  data-radix-menu-content=""
  dir="ltr"
  id="radix-:r1:"
  aria-labelledby="radix-:r0:"
  class="inf-dropdown-menu-content"
  tabindex="-1"
  data-orientation="vertical"
  style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); pointer-events: auto;"
>
  <a
    title="Прасс Павел"
    as="a"
    href="https://specdep.ru"
    role="menuitem"
    class="inf-dropdown-menu-item"
    tabindex="-1"
    data-orientation="vertical"
    data-radix-collection-item=""
  >
    Прасс Павел
  </a>
  <a
    title="Хальмеев Александр"
    as="a"
    href="https://specdep.ru"
    role="menuitem"
    class="inf-dropdown-menu-item"
    tabindex="-1"
    data-orientation="vertical"
    data-radix-collection-item=""
  >
    Хальмеев Александр
  </a>
</div>
`;

exports[`Breadcrumbs With Dropdown > should match snapshot 1`] = `
<nav
  aria-label="Breadcrumb"
  class="inf-breadcrumbs"
>
  <a
    class="inf-breadcrumbs-item"
    href="https://specdep.ru"
    title="Главная"
  >
    Главная
  </a>
  <svg
    class="inf-breadcrumbs-separator"
    fill="none"
    height="20"
    viewBox="0 0 20 20"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 15L13 10L8 5"
      stroke="currentColor"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="inf-breadcrumbs-show-more-button"
    data-state="closed"
    id="radix-:r0:"
    type="button"
  >
    ...
  </button>
  <svg
    class="inf-breadcrumbs-separator"
    fill="none"
    height="20"
    viewBox="0 0 20 20"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 15L13 10L8 5"
      stroke="currentColor"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
  <a
    class="inf-breadcrumbs-item"
    href="https://specdep.ru"
    title="Леонид Хенкин"
  >
    Леонид Хенкин
  </a>
  <svg
    class="inf-breadcrumbs-separator"
    fill="none"
    height="20"
    viewBox="0 0 20 20"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 15L13 10L8 5"
      stroke="currentColor"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
  <a
    class="inf-breadcrumbs-item"
    href="https://specdep.ru"
    title="Александр Круглов"
  >
    Александр Круглов
  </a>
</nav>
`;
